Fix Title on mobile

--- a/src/components/Title/index.module.css
+++ b/src/components/Title/index.module.css
@@ -1,13 +1,23 @@
-.Title {
+.root {
   font-family: "Acta Display";
-  font-size: 84px;
+  font-size: 40px;
   font-weight: 400;
-  line-height: 96px;
+  line-height: 56px;
+}
+
+.root.blue {
   color: #045cfc;
 }
 
-.Title.Title--darkBlue {
+.root.darkBlue {
   color: #2421ab;
+}
+
+@media (min-width: 321px) {
+  .root {
+    font-size: 84px;
+    line-height: 96px;
+  }
 }
 
 /**
